modified:   game.js 	modified:   game_description.js 	deleted:    game_stat.js 	modified:   main.js 	modified:   menu.js 	modified:   ../../index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<style type="text/css">
 		body{
 			background: #80ccff;
@@ -11,16 +12,17 @@
 		}
 	</style>
 	<title>Dictée de mots</title>
-    <script src="assets/js/phaser.min.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/phaser.min.js"></script>
     <script src="assets/js/menu.js"></script>
     <script src="assets/js/game.js"></script>
     <script src="assets/js/game_over.js"></script>
     <script src="assets/js/game_win.js"></script>
-    <script src="assets/js/game_stat.js"></script>
+    <script src="assets/js/game_resultat.js"></script>
+    <script src="assets/js/game_description.js"></script>
     <script src="assets/js/main.js"></script>
-
-	<meta charset="utf-8">
-
+    <script src="assets/js/ochLib.js"></script>
+    <script src="assets/js/keymap.js"></script>
 
 
 </head>
