--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<style type="text/css">
 		body{
 			background: #80ccff;
+			background-image: url("./assets/images/1176-jeux-de-lumiere-WallFizz.jpg");
 			color : #000000;
 			font-size : 24px;
 			padding:0px;
@@ -28,7 +29,7 @@
 </head>
 <body id="page1" >
 	<center>
-		<div>Dictée de mots<div>
+		<div><h2>Dictée de mots</h2><div>
 		<hr></hr>
 		<div id="phaser-example"></div>
 	<center>
